samples/_failures_safe/1761002411_ad4c34_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf39d095.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_bf39d095.c:196:24: error: missing terminating " character
  196 |                 printf("NUMBER
      |                        ^~~~~~~
./samples/SAFE/__tmp_bf39d095.c:196:17: error: expected expression at end of input
  196 |                 printf("NUMBER
      |                 ^~~~~~
./samples/SAFE/__tmp_bf39d095.c:196:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf39d095.c:196:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf39d095.c:196:17: error: expected declaration or statement at end of input
